<resources>
    <string name="app_name">Diophantine</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="copyright">Copyright © Alex Povad</string>>
    <string name="about_text">Diophantine is an Android app that allows users to explore Diophantine equations.
    Enter the required parameters, and the app will calculate solutions based on the provided conditions.
    Whether you are interested in square or non-square solutions, this app provides a tool to explore
    the fascinating world of Diophantine equations. Source code available on <a href="https://github.com/ialexpovad/Diophantine">GitHub</a>.
    </string>
    <!-- Theme Section -->
    <string name="theme">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="system_theme">System</string>

    <!-- Language Section -->
    <string name="language">Language</string>
    <string name="english_language">English</string>
    <string name="russian_language">Русский</string>

    <string name="equation_text">m^{pk}=2n-1</string>
    <string name="enter_degree_hint">Enter Degree for m</string>
    <string name="limit_text">Limit for n: </string>
    <string name="limit_error">Enter degree or k, p, mod</string>

    <string name="square_text">Squares of Natural Numbers?</string>
    <string name="calculate_button_text">Calculate</string>

    <string name="testing_notice">This application is educational in nature and is currently in the alpha testing stage. It undergoes rigorous testing to ensure compliance with correct calculations.</string>
    <string name="version">Version</string>
    <string name="dialog_update_title">Do you want to update the app?</string>
    <string name="dialog_downloading_title">Downloading the update…</string>
</resources>