<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Main content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/equationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/equation_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/degreeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/equationTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/enter_degree_hint"
            android:inputType="number" />

        <!-- EditText for k, p, and modulo -->
        <LinearLayout
            android:id="@+id/linearInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/degreeEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/kEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="k"
                android:inputType="number" />

            <EditText
                android:id="@+id/pEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="p"
                android:inputType="number" />

            <EditText
                android:id="@+id/modEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="mod"
                android:inputType="number" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/limitSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearInputLayout"
            android:layout_marginTop="16dp"
            android:max="9999" />

        <TextView
            android:id="@+id/limitValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/limitSeekBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/limit_text"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/squaresCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/limitValueTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/square_text" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/squaresCheckBox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/calculate_button_text"
            style="?attr/buttonStyle" />

        <ListView
            android:id="@+id/resultsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calculateButton"
            android:layout_marginTop="16dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>